--- a/invista_me/templates/investimentos/detalhe.html
+++ b/invista_me/templates/investimentos/detalhe.html
@@ -11,7 +11,7 @@
             <th>Pago</th>
         </tr>
         <tr>
-            <td>{{dados.Id}}</td>
+            <td>{{dados.id}}</td>
             <td>{{dados.investimento}}</td>
             <td>{{dados.valor}}</td>
             <td>{{dados.data}}</td>
